apps/app1/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gitops-demo-live
  labels:
    app.kubernetes.io/part-of: gitops-demo
