apps/app1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-app
  namespace: gitops-demo-live
  labels:
    app: demo-app
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: demo-app
  type: ClusterIP
