apps/app1/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: demo-app
  namespace: gitops-demo-live
  labels:
    app: demo-app
spec:
  to:
    kind: Service
    name: demo-app
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
  wildcardPolicy: None
